--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
+    "reactjs-popup": "^2.0.6",
     "sass": "^1.75.0",
     "web-vitals": "^2.1.4"
   },
